Fix too long keyword links in the sidebar

--- a/less/gn_view_dutch.less
+++ b/less/gn_view_dutch.less
@@ -1726,6 +1726,12 @@ p {
       }
     }
     .gn-md-side {
+      a {
+        text-align: left;
+        tag {
+          white-space: normal;
+        }
+      }
       section {
         h2 {
           &:first-of-type {
